# mcp-odbc

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: config.example.ini
examples/: CLAUDE.md.example
examples/agents/: odbc-crawler.md
research/: 01_mcp_sdk_patterns.md  02_existing_implementations.md  03_pyodbc_drivers.md  04_erp_schemas_detection.md  05_architecture_design.md
scripts/: setup_vault.py
src/mcp_odbc/: __init__.py  __main__.py  audit.py  config.py  connection.py  detection.py  errors.py  formatting.py  lockout.py  metadata.py  query.py  server.py  vault.py
src/mcp_odbc/adapters/: __init__.py  base.py  generic.py  sybase.py
tests/: conftest.py  test_config.py  test_connection.py  test_errors.py  test_formatting.py  test_query.py  test_server.py  test_vault.py
